last changes to navbar on mobile, last desperate attempts to fix bootstrap grid on features page

--- a/style.css
+++ b/style.css
@@ -207,6 +207,14 @@ input[type=checkbox] {
     text-align: center;
 }
 
+.row {
+    text-align: center;
+}
+
+.col-md-4 {
+    text-align: center;
+}
+
 #cloudFeature {
     max-width: 128px;
 }
